--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h2>Portfolio</h2>
           <div class="article-body">
             <div class="rounded-image-container">
-              <img src="img/mikanyan1.gif" alt="" width="300" height="auto">
+              <img src="img/hamret.jpg" alt="" width="300" height="auto">
             </div>
             <h3 id="profile">PROFILE</h3>
             <p>私は大阪公立大学工業高等専門学校の知能情報コースの学生です。<br>趣味はWeb3系の事をする事です。Discordエンジニア等を行っています。</p>
