内容を少し変えた

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property='og:title' content="Kousensei Jamayumis's portfolio ">
   <meta property='og:url' content='URLが入る'>
   <meta property='og:description' content='jamayumiのポートフォリオサイトです。'>
-  <meta property="og:image" content="img/ogp.png">
+  <meta property="og:image" content="img/hamret.png">
   <meta name="description" content="jamayumiのポートフォリオサイトです" />
   <title>jamayumi's portfolio</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -51,7 +51,7 @@
               <img src="img/hamret.png" alt="" width="300" height="auto">
             </div>
             <h3 id="profile">PROFILE</h3>
-            <p>私は大阪公立大学工業高等専門学校の知能情報コースの学生です。<br>趣味はWeb3系の事をする事です。Discordエンジニア等を行っています。</p>
+            <p>私は大阪公立大学工業高等専門学校の知能情報コースの高専二年生です。<br>趣味はWeb3系の事をする事です。Discordエンジニア等を行っています。</p>
             <h3 id="career">CAREER</h3>
             <p>2022年4月<a href="https://www.ct.omu.ac.jp/">大阪公立大学工業高等専門学校</a>に入学<br>2023年4月知能情報コース(Iコース)に配属</p>
 
