--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property='og:url' content='URLが入る'>
   <meta property='og:description' content='jamayumiのポートフォリオサイトです。'>
   <meta property="og:image" content="img/hamret.png">
-  <meta name="description" content="jamayumiのポートフォリオサイトです" />
+  <meta name="description" content="jamayumiのポートフォリオサイト" />
   <title>jamayumi's portfolio</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
