タイピングゲームの概要解説

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </div>
 
             <h3 id="product">PRODUCT</h3>
-            <p><strong>自由課題作品:<a href="https://github.com/jamayumi/taipingigame">タイピングゲーム</strong></a></p>
+            <p><strong>自由課題作品:<a href="https://github.com/jamayumi/taipingigame">タイピングゲーム</strong></a><br>作成時間が10時間でpythonを作って作りました。MODEを選んでタイピングをすることが出来るゲームです。</p>
             <style>
               .image-with-shadow {
                 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* 影の設定 */
@@ -117,6 +117,9 @@
             <a href="https://github.com/jamayumi/taipingigame">
               <img src="img/taiping-game.png" alt="" width="600" height="auto" class="image-with-shadow">
             </a>
+            
+            <a href="" class="btn btn-border">詳しく見る</a>
+            
             <p><strong>自由課題作品:<a href="https://github.com/kk2a/kosensai2-I-B.git">広告の面白いゲーム</strong></a><br>主人公や敵に数字が割り振られており、敵を倒しながら数を増やしていくゲームです。<br>私は背景イラストの作成を担当しました。</p>
             <a href="https://github.com/kk2a/kosensai2-I-B.git">
               <img src="img/background3.png" alt="" width="600" height="auto" class="image-with-shadow">
