--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </div>
 
             <h3 id="product">PRODUCT</h3>
-            <p><strong>自由課題作品:<a href="https://github.com/jamayumi/taipingigame">タイピングゲーム</strong></a><br>作成時間が10時間でpythonを作って作りました。MODEを選んでタイピングをすることが出来るゲームです。</p>
+            <p><strong>自由課題作品:<a href="https://github.com/jamayumi/taipingigame">タイピングゲーム</strong></a><br>作成時間が10時間でpythonを作って作りました。<br>MODEを選んでタイピングをすることが出来るゲームです。</p>
             <style>
               .image-with-shadow {
                 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* 影の設定 */
