グローバルナビゲーションを新たに追加

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li class="gnav-item"><a href=".#profile">PROFILE</a></li>
             <li class="gnav-item"><a href="./#career">CAREER</a></li>
             <li class="gnav-item"><a href="./#skill">SKILL</a></li>
+            <li class="gnav-item"><a href="./#product">PRODUCT</a></li>
             <li class="gnav-item"><a href="./#contact">CONTACT</a></li>
           </ul>
         </nav>
