右クリックの制限を行った

--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
             <div class="rounded-image-container">
               <img src="img/hamret.png" alt="" width="300" height="auto">
             </div>
+            
+            <script>
+              document.addEventListener('contextmenu', event => event.preventDefault());
+            </script>
+            <script>
+              document.addEventListener('dragstart', event => event.preventDefault());
+            </script>
+            
             <h3 id="profile">PROFILE</h3>
             <p>私は大阪公立大学工業高等専門学校の知能情報コースの高専二年生です。<br>趣味はWeb3系の事をする事です。Discordエンジニア等を行っています。</p>
             <h3 id="career">CAREER</h3>
