高専祭展示作品

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <script>
               document.addEventListener('dragstart', event => event.preventDefault());
             </script>
-            
+
             <h3 id="profile">PROFILE</h3>
             <p>私は大阪公立大学工業高等専門学校の知能情報コースの高専二年生です。<br>趣味はWeb3系の事をする事です。Discordエンジニア等を行っています。</p>
             <h3 id="career">CAREER</h3>
@@ -127,7 +127,7 @@
               <img src="img/taiping-game.png" alt="" width="600" height="auto" class="image-with-shadow">
             </a>
             
-            <p><strong>自由課題作品:<a href="https://github.com/kk2a/kosensai2-I-B.git">広告の面白いゲーム</strong></a><br>主人公や敵に数字が割り振られており、敵を倒しながら数を増やしていくゲームです。<br>私は背景イラストの作成を担当しました。</p>
+            <p><strong>高専祭展示作品:<a href="https://github.com/kk2a/kosensai2-I-B.git">広告の面白いゲーム</strong></a><br>主人公や敵に数字が割り振られており、敵を倒しながら数を増やしていくゲームです。<br>私は背景イラストの作成を担当しました。</p>
             <a href="https://github.com/kk2a/kosensai2-I-B.git">
               <img src="img/background3.png" alt="" width="600" height="auto" class="image-with-shadow">
             </a>
