--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <img src="img/taiping-game.png" alt="" width="600" height="auto" class="image-with-shadow">
             </a>
             
-            <p><strong>高専祭展示作品:<a href="https://github.com/kk2a/kosensai2-I-B.git">広告の面白いゲーム</strong></a><br>主人公や敵に数字が割り振られており、敵を倒しながら数を増やしていくゲームです。<br>私は背景イラストの作成を担当しました。</p>
+            <p><strong>高専祭展示作品:広告の面白いゲーム</strong><br>主人公や敵に数字が割り振られており、敵を倒しながら数を増やしていくゲームです。<br>私は背景イラストの作成を担当しました。</p>
             <a href="https://github.com/kk2a/kosensai2-I-B.git">
               <img src="img/background3.png" alt="" width="600" height="auto" class="image-with-shadow">
             </a>
