作品を追加して諸々修正した。

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
 
             <h3 id="product">PRODUCT</h3>
-            <p><strong>自由課題作品:<a href="https://github.com/jamayumi/taipingigame">タイピングゲーム</strong></a><br>作成時間が10時間でpythonを作って作りました。<br>MODEを選んでタイピングをすることが出来るゲームです。</p>
+            <p><strong>自由課題作品:<a href="https://github.com/jamayumi/taipingigame">タイピングゲーム</strong></a><br>この作品は高校二年生の夏ぐらいに自主作成で作った作品です。<br> 作成時間が10時間でpythonを作って作りました。<br>MODEを選んでタイピングをすることが出来るゲームです。</p>
             <style>
               .image-with-shadow {
                 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* 影の設定 */
@@ -127,10 +127,23 @@
               <img src="img/taiping-game.png" alt="" width="600" height="auto" class="image-with-shadow">
             </a>
             
-            <p><strong>高専祭展示作品:広告の面白いゲーム</strong><br>主人公や敵に数字が割り振られており、敵を倒しながら数を増やしていくゲームです。<br>私は背景イラストの作成を担当しました。</p>
-            <a href="https://github.com/kk2a/kosensai2-I-B.git">
+            <p><strong>高専祭展示作品:広告の面白いゲーム<a href="https://github.com/jammaru/tukkomi-best-friend"></strong></a><br>この作品は高校二年生の時に5人チームで作った作品です。 <br> 主人公や敵に数字が割り振られており、敵を倒しながら数を増やしていくゲームです。<br>私は背景イラストの作成を担当しました。</p>
+            
               <img src="img/background3.png" alt="" width="600" height="auto" class="image-with-shadow">
             </a>
+
+
+            <p><strong>自由課題作品:<a href="https://github.com/jammaru/tukkomi-best-friend">貴方の何処でもツッコミの友!</strong></a><br>この作品は高校二年生の冬休みに一人で作った作品です。 <br> ユーザーがボケてコメントをする事で最高のツッコミの友が最高のツッコミをしてくれます。<br> OpenaiのAPIを使用していてpythonでシステムを作成して <br> HTMLでフロントエンドを作成しました。</p>
+            <style>
+              .image-with-shadow {
+                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* 影の設定 */
+              }
+            </style>
+
+            <a href="https://github.com/jammaru/tukkomi-best-friend">
+              <img src="https://bit.ly/3tJjrFn" alt="" width="600" height="auto" class="image-with-shadow">
+            </a>
+
             <h3 id="contact">CONTACT</h3>
             <p style="text-align: center; margin: 40px auto">
               お気軽にお問い合わせください。
