諸々修正した

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property='og:type' content='website'>
-  <meta property='og:title' content="Kousensei Jamayumis's portfolio ">
+  <meta property='og:title' content="Kousensei Jammaru's portfolio ">
   <meta property='og:url' content='URLが入る'>
-  <meta property='og:description' content='jamayumiのポートフォリオサイトです。'>
+  <meta property='og:description' content='jammaruのポートフォリオサイトです。'>
   <meta property="og:image" content="img/hamret.png">
-  <meta name="description" content="jamayumiのポートフォリオサイト" />
-  <title>jamayumi's portfolio</title>
+  <meta name="description" content="jammaruのポートフォリオサイト" />
+  <title>jammaru's portfolio</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
@@ -116,14 +116,14 @@
           </div>
 
             <h3 id="product">PRODUCT</h3>
-            <p><strong>自由課題作品:<a href="https://github.com/jamayumi/taipingigame">タイピングゲーム</strong></a><br>この作品は高校二年生の夏ぐらいに自主作成で作った作品です。<br> 作成時間が10時間でpythonを作って作りました。<br>MODEを選んでタイピングをすることが出来るゲームです。</p>
+            <p><strong>自由課題作品:<a href="https://github.com/jammaru/taipingigame">タイピングゲーム</strong></a><br>この作品は高校二年生の夏ぐらいに自主作成で作った作品です。<br> 作成時間が10時間でpythonを作って作りました。<br>MODEを選んでタイピングをすることが出来るゲームです。</p>
             <style>
               .image-with-shadow {
                 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* 影の設定 */
               }
             </style>
             
-            <a href="https://github.com/jamayumi/taipingigame">
+            <a href="https://github.com/jammaru/taipingigame">
               <img src="img/taiping-game.png" alt="" width="600" height="auto" class="image-with-shadow">
             </a>
             
@@ -315,7 +315,7 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="copyright">&copy;Jamayumi Portfolio</div>
+      <div class="copyright">&copy;Jammaru Portfolio</div>
     </footer>
     <!-- /footer -->
 
