--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="header ">
       <div class="container">
         <h1 class="header-logo">
-          <a href=".">Jamayumi Portfolio</a>
+          <a href=".">Jammaru Portfolio</a>
         </h1>
         <nav class="gnav">
           <ul class="gnav-list">
