--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <article class="article">
         <div class="article-container">
-          <p class="mv-title">Jamayumi</p>
+          <p class="mv-title">Jammaru</p>
           <h2>Portfolio</h2>
           <div class="article-body">
             <div class="rounded-image-container">
