--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </a>
 
 
-            <p><strong>自由課題作品:<a href="https://github.com/jammaru/tukkomi-best-friend">貴方の何処でもツッコミの友!</strong></a><br>この作品は高校二年生の冬休みに一人で作った作品です。製作時間は約25時間程です。 <br> ユーザーがボケてコメントをする事で最高のツッコミの友が最高のツッコミをしてくれます。<br> OpenaiのAPIを使用していてpythonでシステムを作成して <br> HTMLでサイトの見た目を作成しました。</p>
+            <p><strong>自由課題作品:<a href="https://github.com/jammaru/tukkomi-best-friend">貴方の何処でもツッコミの友!</strong></a><br>この作品は高校二年生の冬休みに一人で作った作品です。製作時期は2024年1月です。 <br> ユーザーがボケてコメントをする事で最高のツッコミの友が最高のツッコミをしてくれます。<br> OpenaiのAPIを使用していてpythonでシステムを作成して <br> HTMLでサイトの見た目を作成しました。</p>
             <style>
               .image-with-shadow {
                 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* 影の設定 */
@@ -142,6 +142,10 @@
 
             <a href="https://github.com/jammaru/tukkomi-best-friend">
               <img src="https://bit.ly/3tJjrFn" alt="" width="600" height="auto" class="image-with-shadow">
+            </a>
+
+            <a href="https://github.com/jammaru/tukkomi-best-friend/">
+              <img src="https://bit.ly/4aXXlzG" alt="huton" width="600" height="auto" class="image-withi-shadow">
             </a>
 
             <h3 id="contact">CONTACT</h3>
