--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
             </a>
 
             <a href="https://github.com/jammaru/tukkomi-best-friend/">
-              <img src="https://bit.ly/4aXXlzG" alt="huton" width="600" height="auto" class="image-withi-shadow">
+              <img src="https://bit.ly/4aXXlzG" alt="huton" width="600" height="auto" class="image-with-shadow">
+            </a>
+
+            <a href="https://github.com/jammaru/tukkomi-best-friend/">
+              <img src="https://bit.ly/3U0MtuW" alt="huton" width="600" height="auto" class="image-with-shadow">
             </a>
 
             <h3 id="contact">CONTACT</h3>
