--- a/index.html
+++ b/index.html
@@ -152,23 +152,23 @@
               <img src="https://bit.ly/3U0MtuW" alt="huton" width="600" height="auto" class="image-with-shadow">
             </a>
 
-            <p><strong>自由課題作品:<a href="https://github.com/jammaru/tukkomi-best-friend">貴方の何処でもツッコミの友!</strong></a><br>この作品は高校二年生の冬休みに一人で作った作品です。製作時期は2024年1月です。 <br> ユーザーがボケてコメントをする事で最高のツッコミの友が最高のツッコミをしてくれます。<br> 仕組みとしてはOpenAIのAPIを使用していてpythonでシステムを作成して <br> HTMLでサイトの見た目を作成しました。<br> 最高のツッコミ芸人のChatbotがあなたの最高に面白いボケに対して <br> 最高のツッコミ芸人が面白おかしくツッコミしてくれます。 <br> 使用する為には、OpenAIのAPIKeyを入手してローカルで動かす必要があります。</p>
+            <p><strong>自由課題作品:<a href="https://github.com/jammaru/tukkomi-best-friend">Typing Party App!</strong></a><br>この作品は高校二年生の2月に一人で作った作品です。製作時期は2024年2月です。開発時間は約11時間程です。 <br> ユーザーがボケてコメントをする事で最高のツッコミの友が最高のツッコミをしてくれます。<br> 仕組みとしてはOpenAIのAPIを使用していてpythonでシステムを作成して <br> HTMLでサイトの見た目を作成しました。<br> 最高のツッコミ芸人のChatbotがあなたの最高に面白いボケに対して <br> 最高のツッコミ芸人が面白おかしくツッコミしてくれます。 <br> 使用する為には、OpenAIのAPIKeyを入手してローカルで動かす必要があります。</p>
             <style>
               .image-with-shadow {
                 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* 影の設定 */
               }
             </style>
 
-            <a href="https://github.com/jammaru/tukkomi-best-friend">
-              <img src="https://bit.ly/3tJjrFn" alt="" width="600" height="auto" class="image-with-shadow">
+            <a href="https://github.com/jammaru/typing-party-app">
+              <img src="img\typing-app_1.png" alt="normal" width="600" height="auto" class="image-with-shadow">
             </a>
 
-            <a href="https://github.com/jammaru/tukkomi-best-friend/">
-              <img src="https://bit.ly/4aXXlzG" alt="huton" width="600" height="auto" class="image-with-shadow">
+            <a href="https://github.com/jammaru/typing-party-app">
+              <img src="img\typing-app_2.png" alt="正解" width="600" height="auto" class="image-with-shadow">
             </a>
 
-            <a href="https://github.com/jammaru/tukkomi-best-friend/">
-              <img src="https://bit.ly/3U0MtuW" alt="huton" width="600" height="auto" class="image-with-shadow">
+            <a href="https://github.com/jammaru/typing-party-app">
+              <img src="img\typing-app_3.png" alt="result" width="600" height="auto" class="image-with-shadow">
             </a>            
 
             <h3 id="contact">CONTACT</h3>
