--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <img src="https://bit.ly/3U0MtuW" alt="huton" width="600" height="auto" class="image-with-shadow">
             </a>
 
-            <p><strong>自由課題作品:<a href="https://github.com/jammaru/typing-party-app">Typing Party App!</strong></a><br>この作品は高校二年生の2月に一人で作った作品です。<br> 製作時期は2024年2月です。開発時間は約11時間程です。 <br>Pysideを使ってGUIアプリを作成しました。<br> GUIアプリを自分でちゃんと作ったことが無かったのでとても苦手だと思っていましたが <br> いざ作ってみるとGUIアプリを作るのはとても楽しかったです。勉強にもなりました。 <br>  <br> <strong>Typing Party Appの遊び方</strong> <br> 10個問題がランダムに出題されるので間違いなく答えてください。 10問答えたら終了です。終了までの時間と正解数を表示してくれます。再スタートを押すともう一回最初から始めれます。タイピングを鍛えたい方にはおススメのGUIアプリとなっています。</p>
+            <p><strong>自由課題作品:<a href="https://github.com/jammaru/typing-party-app">Typing Party App!</strong></a><br>この作品は高校二年生の2月に一人で作った作品です。<br> 製作時期は2024年2月です。開発時間は約11時間です。 <br>Pysideを使ってGUIアプリを作成しました。<br> GUIアプリを自分でちゃんと作ったことが無かったのでとても苦手だと思っていましたが <br> いざ作ってみるとGUIアプリを作るのはとても楽しかったです。勉強にもなりました。 <br>  <br> <strong>Typing Party Appの遊び方</strong> <br> 10個問題がランダムに出題されるので間違いなく答えてください。 10問答えたら終了です。終了までの時間と正解数を表示してくれます。再スタートを押すともう一回最初から始めれます。タイピングを鍛えたい方にはおススメのGUIアプリとなっています。</p>
             <style>
               .image-with-shadow {
                 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* 影の設定 */
