アップデート

--- a/index.html
+++ b/index.html
@@ -169,7 +169,18 @@
 
             <a href="https://github.com/jammaru/typing-party-app">
               <img src="img\typing-app_3.png" alt="result" width="600" height="auto" class="image-with-shadow">
-            </a>            
+            </a>
+
+            <p><strong><a href="https://jammaru.github.io/javascript-guide/">REACT GUIDE</strong></a><br>この作品は高校三年生の2024年8月にHTML、CSS、JavaScriptを用いて<br>1人で作成したウェブサイトです。<br> 製作時期は2024年8月です。開発時間は約15時間です。 <br>このサイトはReactの特徴と活用方法について、初心者から中級者まで幅広く学べるように設計されています。Reactの基本概念から実践的な活用方法まで、段階的に解説しています。仮想DOM、コンポーネントベースの開発、JSX、Hooksなどの重要な概念を学びながら、実際のプロジェクト例を通じてReactの力を体感できます。また、パフォーマンス最適化やベストプラクティスなど、実務で役立つ知識も提供しています。このサイトを通じて、モダンなWebアプリケーション開発に不可欠なReactのスキルを効果的に習得することができます。</p>
+            <style>
+              .image-with-shadow {
+                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* 影の設定 */
+              }
+            </style>
+
+            <a href="https://jammaru.github.io/javascript-guide/">
+              <img src="img\React.png" alt="react" width="600" height="auto" class="image-with-shadow">
+            </a>
 
             <h3 id="contact">CONTACT</h3>
             <p style="text-align: center; margin: 40px auto">
