少し修正した

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </script>
 
             <h3 id="profile">PROFILE</h3>
-            <p>私は大阪公立大学工業高等専門学校の知能情報コースの高専二年生です。<br>趣味はWeb3系の事をする事です。Discordエンジニア等を行っています。</p>
+            <p>私は大阪公立大学工業高等専門学校の知能情報コースの高専三年生です。<br>趣味はAI系の事をする事です。Discordエンジニア等を行っています。</p>
             <h3 id="career">CAREER</h3>
             <p>2022年4月<a href="https://www.ct.omu.ac.jp/">大阪公立大学工業高等専門学校</a>に入学<br>2023年4月知能情報コース(Iコース)に配属</p>
 
